# url_snipper

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  setup.sh
src/: __init__.py  controller.py  data.py  models.py  service.py  utils.py  web.py
