[tool.poetry]
name = "url-snipper"
version = "0.1.0"
description = "A lightweight backend for a url shortener service"
authors = ["Ukeme Edet <ukemeedet2207@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
